<resources>
    <string name="app_name">ATM Consulting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consulting</string>
    <string name="nav_header_subtitle">consulting@atm.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
